--- a/css/index.scss
+++ b/css/index.scss
@@ -489,7 +489,14 @@ header{
                         height: 32px;
                         img{
                             width: 100%;
+                            transition:transform 0.4s linear;
+                            -moz-transition:  -moz-transform 0.4s linear;
+                            -webkit-transition: -webkit-transform 0.4s linear;      
+                            -ms-transition: transform 0.4s linear; 
                         }
+                    }
+                    a:hover img{
+                        transform: rotate(360deg);
                     }
                 }
             }
