--- a/css/index.css
+++ b/css/index.css
@@ -207,6 +207,7 @@ header {
               position: absolute;
               content: "";
               width: 0%;
+              height: 1px;
               top: 100%;
               left: 0;
               border-bottom: 1px solid white;
