--- a/css/public.css
+++ b/css/public.css
@@ -1,3 +1,40 @@
+@charset "UTF-8";
+.p1 {
+  word-break: break-all;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  /** 对象作为伸缩盒子模型显示 **/
+  -webkit-box-orient: vertical;
+  /** 设置或检索伸缩盒对象的子元素的排列方式 **/
+  -webkit-line-clamp: 1;
+  /** 显示的行数 **/
+  overflow: hidden;
+  /** 隐藏超出的内容 **/ }
+
+.p2 {
+  word-break: break-all;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  /** 对象作为伸缩盒子模型显示 **/
+  -webkit-box-orient: vertical;
+  /** 设置或检索伸缩盒对象的子元素的排列方式 **/
+  -webkit-line-clamp: 2;
+  /** 显示的行数 **/
+  overflow: hidden;
+  /** 隐藏超出的内容 **/ }
+
+.p3 {
+  word-break: break-all;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  /** 对象作为伸缩盒子模型显示 **/
+  -webkit-box-orient: vertical;
+  /** 设置或检索伸缩盒对象的子元素的排列方式 **/
+  -webkit-line-clamp: 3;
+  /** 显示的行数 **/
+  overflow: hidden;
+  /** 隐藏超出的内容 **/ }
+
 header {
   height: 80px;
   position: fixed;
@@ -226,6 +263,13 @@ footer {
   #goToTop a:hover {
     width: 44px;
     margin: -2px 0px 0px -2px; }
+
+.btn {
+  width: 100%;
+  height: 60px;
+  background-color: #a51e32;
+  color: white;
+  font-size: 18px; }
 
 @media (max-width: 1200px) {
   header nav {
