--- a/css/public.scss
+++ b/css/public.scss
@@ -331,6 +331,14 @@ footer{
         margin: -2px 0px 0px -2px;
     }
 }
+//按钮
+.btn{
+    width: 100%;
+    height: 60px;
+    background-color: $red;
+    color: white;
+    font-size: 18px;
+}
 //最大1200px
 @media(max-width:1200px){
     header{
