--- a/css/server.css
+++ b/css/server.css
@@ -94,7 +94,11 @@
           width: 92px; }
       .serverBox .sBLeft .radioBox .rRight a {
         display: block;
-        padding: 25px 10px; }
+        padding: 25px 10px;
+        -moz-transition: transform 0.5s;
+        -webkit-transition: transform 0.5s;
+        -ms-transition: transform 0.5s;
+        transition: transform 0.5s; }
   .serverBox .sBRight {
     width: 500px; }
 
