--- a/css/server.scss
+++ b/css/server.scss
@@ -119,6 +119,10 @@ $black:#333333;
                 a{
                     display: block;
                     padding: 25px 10px;
+                    -moz-transition: transform 0.5s;
+                    -webkit-transition: transform 0.5s;
+                    -ms-transition: transform 0.5s;
+                    transition: transform 0.5s;
                 }
             }
         }
