--- a/css/index.scss
+++ b/css/index.scss
@@ -39,10 +39,8 @@ header{
             height: 98px;
             margin-top: 30px;
             border-right: 1px dashed #c8c8c8;
-            div{
+            >div{
                 width: 100%;
-                height: 72px;
-                background: url(../img/center1.png) no-repeat center center;
                 transition: background-image 0.5s linear;
                 -moz-transition: background-image 0.5s linear;
                 -webkit-transition: background-image 0.5s linear;
@@ -57,64 +55,164 @@ header{
             }
         }
     }
+    >div a>div>div>img{
+        transition: margin-top 0.5s;
+        -ms-transition: margin-top 0.5s;
+        -webkit-transition: margin-top 0.5s;
+        -moz-animation: margin-top 0.5s;
+    }
+    > div:nth-child(2) a>div{
+        padding-top: 22px;
+        height: 50px;
+        >div{
+            width: 54px;     
+            height: 50px;      
+            margin: 0 auto;           
+            overflow: hidden;
+        }
+    }
     > div:nth-child(2) a:hover{
-        div{
-            background-image: url(../img/center11.png);
+        >div{
+            >div{
+                img{
+                    margin-top: -60px;
+                }   
+            }
         }
         p{
             color: $red;
         }
     }
-    > div:nth-child(3) a div{
-        background-image: url(../img/center2.png);
+    > div:nth-child(3) a>div{
+        padding-top: 24px;
+        height: 48px;
+        >div{
+            width: 44px;   
+            height: 48px;        
+            margin: 0 auto;           
+            overflow: hidden;
+            img{
+                margin-left: -60px;
+            }
+        }
     }
     > div:nth-child(3) a:hover{
-        div{
-            background-image: url(../img/center22.png);
+        >div{
+            >div{
+                img{
+                    margin-top: -60px;
+                }   
+            }
         }
         p{
             color: $red;
         }
     }
-    > div:nth-child(4) a div{
-        background-image: url(../img/center3.png);
+    > div:nth-child(4) a>div{
+        padding-top: 22px;
+        height: 50px;
+        >div{
+            width: 49px;
+            height: 50px;
+            margin: 0 auto;          
+            overflow: hidden;
+            img{
+                
+                margin-left: 0px;
+                margin-top: -120px;
+            }
+        }
     }
     > div:nth-child(4) a:hover{
-        div{
-            background-image: url(../img/center33.png);
+        >div{
+            >div{
+                img{
+                    margin-top: -180px;
+                }   
+            }
         }
         p{
             color: $red;
         }
     }
-    > div:nth-child(5) a div{
-        background-image: url(../img/center4.png);
+    > div:nth-child(5) a>div{
+        padding-top: 21px;
+        height: 51px;
+        >div{
+            width: 54px;
+            height: 51px;
+            margin: 0 auto;          
+            overflow: hidden;
+            img{
+                
+                margin-left: -60px;
+                margin-top: -120px;
+            }
+        }
     }
     > div:nth-child(5) a:hover{
-        div{
-            background-image: url(../img/center44.png);
+        >div{
+            >div{
+                img{
+                    margin-top: -180px;
+                }   
+            }
         }
         p{
             color: $red;
         }
     }
-    > div:nth-child(6) a div{
-        background-image: url(../img/center5.png);
+    > div:nth-child(6) a>div{
+        padding-top: 26px;
+        height: 46px;
+        >div{
+            width: 44px;
+            height: 46px;
+            margin: 0 auto;          
+            overflow: hidden;
+            img{
+                
+                margin-left: -0px;
+                margin-top: -240px;
+            }
+        }
     }
     > div:nth-child(6) a:hover{
-        div{
-            background-image: url(../img/center55.png);
+        >div{
+            >div{
+                img{
+                    margin-top: -300px;
+                }   
+            }
         }
         p{
             color: $red;
         }
     }
-    > div:nth-child(7) a div{
-        background-image: url(../img/center6.png);
+    
+    > div:nth-child(7) a>div{
+        padding-top: 26px;
+        height: 46px;
+        >div{
+            width: 46px;
+            height: 46px;
+            margin: 0 auto;          
+            overflow: hidden;
+            img{
+                
+                margin-left: -60px;
+                margin-top: -240px;
+               
+            }
+        }
     }
     > div:nth-child(7) a:hover{
-        div{
-            background-image: url(../img/center66.png);
+        >div{
+            >div{
+                img{
+                    margin-top: -300px;
+                }   
+            }
         }
         p{
             color: $red;
@@ -170,11 +268,27 @@ header{
                     left: 0;
                     background-color: rgba(0, 0, 0, 0.8);
                     z-index: 10;
-                    img {
+                    .joiningBox{
+                        width: 39px;   
+                        height: 36px;                     
                         margin: 0 auto;
                         margin-top: 192px;
+                        overflow: hidden;
+                        img {                       
+                            margin-left: -120px;
+                        }
                     }
-                    
+                    .loveOrderBox{
+                        width: 36px;   
+                        height: 36px;                     
+                        margin: 0 auto;
+                        margin-top: 192px;
+                        overflow: hidden;
+                        img {                       
+                            margin-left: -120px;
+                            margin-top: -200px;
+                        }
+                    }                
                     p {
                         color: #ffffff;
                         font-size: 16px;
@@ -249,9 +363,26 @@ header{
                             left: 0;
                             background-color: rgba(0, 0, 0, 0.8);
                             z-index: 10;
-                            img {
+                            .businessBox{
+                                width: 36px;   
+                                height: 36px;                     
                                 margin: 0 auto;
                                 margin-top: 67px;
+                                overflow: hidden;
+                                img {                       
+                                    margin-left: -120px;
+                                    margin-top: -40px;
+                                }
+                            }
+                            .findBox{
+                                img{
+                                    margin-top: -80px;
+                                }
+                            }
+                            .serverBox{
+                                img{
+                                    margin-top: -160px;
+                                }
                             }
                             p {
                                 color: #ffffff;
@@ -261,8 +392,16 @@ header{
                             } 
                         }
                         .imgPop {
-                            img{
+                            .orderBox{
+                                width: 34px;   
+                                height: 37px;                     
+                                margin: 0 auto;
                                 margin-top: 30px;
+                                overflow: hidden;
+                                img {                       
+                                    margin-left: -120px;
+                                    margin-top: -120px;
+                                }
                             }
                             ul{
                                 margin: 0 auto;
@@ -435,7 +574,7 @@ header{
             height: 0;
         }
         .ccOn{
-            display: none;
+//          display: none;
             width: 100%;
             position: absolute;
             top: 0;
@@ -487,6 +626,7 @@ header{
                         display: block;
                         width: 32px;
                         height: 32px;
+                        overflow: hidden;
                         img{
                             width: 100%;
                             transition:transform 0.4s linear;
