--- a/css/index.scss
+++ b/css/index.scss
@@ -574,7 +574,7 @@ header{
             height: 0;
         }
         .ccOn{
-//          display: none;
+            display: none;
             width: 100%;
             position: absolute;
             top: 0;
