--- a/css/about.scss
+++ b/css/about.scss
@@ -204,6 +204,16 @@ $black:#333333;
                     td{
                         width: 100%;
                         padding: 120px 0 160px;
+                        .nomore{
+                            width: 200px;
+                            height: 200px;
+                            overflow: hidden;
+                            margin: 0 auto;
+                            img{
+                                margin-top: -160px;
+                                margin-left: -220px ;
+                            }
+                        }
                         p{
                             font-size: 16px;
                             line-height: 24px;
