--- a/css/public.scss
+++ b/css/public.scss
@@ -65,9 +65,6 @@ header{
                 display: block;
                 height: 26px;
                 padding: 27px 0px;
-                img{
-                    height: 100%;
-                }
             }
         }
         .navR{
@@ -102,7 +99,7 @@ header{
     width: 80px;
     background-color: #FFFFFF;
     z-index: 999;
-    box-shadow: 0 2px 2px rgba(51,51,51,0.2);
+    box-shadow: 0 0 2px 2px rgba(153,153,153,0.2);
     margin-top: -217px;
     .rNavChild{
         width: 100%;
@@ -111,7 +108,8 @@ header{
                 display: block;
                 width: 32px;
                 height: 32px;
-                background: url(../img/news.png) no-repeat center center;
+                background: url(../img/centers.png) no-repeat;
+                background-position: -120px -280px;
                 margin: 0 auto;
                 margin-top: 24px;
                 img{
@@ -139,19 +137,25 @@ header{
         ul li:nth-child(1) a:hover+p{
             font-size: 16px;
         }
+        ul li:nth-child(2){
+            overflow: hidden;
+            width: 80px;
+            height: 2px;
+        }
         ul li:nth-child(2) img{
-            width: 65px;
-            margin: 0 auto;
+            display: block;
+            margin-left: -218.5px;
+            margin-top: -144px;
         }
     }
     .rNavChild:nth-child(2) ul li:nth-child(1) a{
-        background-image: url(../img/ask.png);
+        background-position: -120px -312px;
     }
     .rNavChild:nth-child(3) ul li:nth-child(1) a{
-        background-image: url(../img/book.png);
+        background-position: -152px -280px;
     }
     .rNavChild:nth-child(4) ul li:nth-child(1) a{
-        background-image: url(../img/join.png);
+        background-position: -152px -312px;
     }
 }
 //尾部
@@ -256,17 +260,19 @@ footer{
                     width: 34px;
                     height: 34px;
                     border-radius: 50%;
-                    transition: background-image 0.5s linear;
-                    -ms-transition: background-image 0.5s linear;
-                    -webkit-transition: background-image 0.5s linear;
-                    -moz-transition: background-image 0.5s linear;
+                    transition: background 0.2s linear;
+                    -ms-transition: background 0.2s linear;
+                    -webkit-transition: background 0.2s linear;
+                    -moz-transition: background 0.2s linear;
                 }
                 div:nth-child(1) a{
-                    background:url(../img/weibo.png) no-repeat center center;
+                    background:url(../img/centers.png) no-repeat;
+                    background-position: -160px -80px;
                     background-color: #e5e5e5;
                 }
                 div:nth-child(2) a{
-                    background:url(../img/wechat.png) no-repeat center center;
+                    background:url(../img/centers.png) no-repeat;
+                    background-position: -160px 0px;
                     background-color: #e5e5e5;
                     position: relative;
                     .zhanwei{
@@ -306,10 +312,10 @@ footer{
                     }
                 }
                 div:nth-child(1) a:hover{
-                    background-image:url('../img/weiboOn.png');
+                    background-position: -160px -120px;
                 }
                 div:nth-child(2) a:hover{
-                    background-image:url('../img/wechatOn.png');  
+                    background-position: -160px -40px;
                 }
             }
         }
@@ -334,21 +340,15 @@ footer{
     bottom: 40px;
     width: 40px;
     height: 40px;
+    overflow: hidden;
     display: none;
     a{
         display: block;
         width: 40px;
-        transition: width 0.1s linear,margin-top 0.1s linear,margin-left 0.1s linear;
-        -moz-transition: width 0.1s linear,margin-top 0.1s linear,margin-left 0.1s linear;
-        -webkit-transition: width 0.1s linear,margin-top 0.1s linear,margin-left 0.1s linear;
-        -ms-transition: width 0.1s linear,margin-top 0.1s linear,margin-left 0.1s linear;
         img{
-            width: 100%;
+            margin-top: -240px;
+            margin-left: -120px;
         }
-    }
-    a:hover{
-        width: 44px;
-        margin: -2px 0px 0px -2px;
     }
 }
 //按钮
